fixed bug : proper alignment for potrait pics

--- a/Profile/static/css/view_post.css
+++ b/Profile/static/css/view_post.css
@@ -340,19 +340,19 @@
 
 /* ------------- Reponsive content -------------- */
 @media only screen and (max-width: 767px) {
-    .post-view { flex-direction: column; }
+    .post-view, .potrait-view { flex-direction: column; }
 
     .refresh-btn-container { margin-bottom: 10px; }
 
     .container-fluid,
     .post-view-container,
-    .post-view, .post-view-container { padding: 0; }
+    .post-view, .potrait-view, .post-view-container { padding: 0; }
 
     .post-view-container {
         margin-top: 15%;
     }
 
-    .status-view, .wrap-img-view, .post-pic-enlarged-view { border-radius: 0; }
+    .status-view, .wrap-img-view, .wrap-potrait-view, .post-pic-enlarged-view { border-radius: 0; }
 
     .wrap-data-view { 
         border-radius: 0; 
